# delta-sync

./: .pre-commit-config.yaml  README.md  compose.yml
backend/: .flake8  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/common/: tmexio_ext.py
backend/app/exceptions/: base_exceptions.py
backend/tests/: conftest.py
backend/tests/common/: api_client.py  assert_contains_ext.py  polyfactory_ext.py
backend/tests/functional/: test_healthcheck.py
frontend/: components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml
frontend/src/: index.css  main.tsx
frontend/src/shared/ui/: tooltip.tsx
